# TelegramApi

./: README.md  pyproject.toml
telegram/: Auth.py  Proxy.py  __init__.py  config.py  telegram.py
telegram/Auth/: Auth.py  __init__.py
telegram/Proxy/: Proxy.py  ProxyChecker.py  ProxyFile.py  __init__.py
telegram/Send/: Document.py  MediaGroup.py  Message.py  Send.py  __init__.py  telegram_request.py
telegram/Send/tools/: Caption.py  __init__.py  telegram_request.py
telegram/libs/: Caption.py  Document.py  MediaGroup.py  Message.py  Send.py  telegram_request.py
telegram/utils/: File.py  MessageHandler.py  Str.py  __init__.py
