[tool.poetry]
name = "telegram"
version = "2.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
rich = "*"
host-tools = { git = "https://github.com/l8556/host_tools.git", branch = "master" }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
